[package]
name = "teemo"
version = "0.1.0"
authors = ["Sino Jee <ultraji@live.com>"]
description = "A simple to use and efficient Web Automation Tool"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive", "cargo"] }
env_logger = "0.10.1"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
tokio = "1.34.0"
thirtyfour = "0.31.0"

[lib]
name = "teemo"
path = "src/lib.rs"

[[bin]]
name = "teemo"
path = "src/bin/main.rs"

